Create model and migration for passengers profile"
